Add Travis CI config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
-# TODO
+language: node_js
+node_js:
+  - "8.11.3"
+before_deploy:
+  - ssh-add <(echo "$SSH_PRIVATE_KEY")
+deploy:
+  provider: script
+  script: rsync --quiet cronjob.js index.html $USER@$HOST:$WEBROOT
+  on:
+    branch: master
+os:
+  - linux
