--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_deploy:
   - ssh-add <(echo "$SSH_PRIVATE_KEY")
 deploy:
   provider: script
-  script: rsync --quiet cronjob.js index.html $USER@$HOST:$WEBROOT
+  script: rsync --quiet cronjob.js index.html $PRODUCTION_USER@$PRODUCTION_HOST:$PRODUCTION_WEBROOT
   on:
     branch: master
 os:
