--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 before_deploy:
   - ssh-add <(echo "$SSH_PRIVATE_KEY")
 install: true
+script:
 deploy:
   provider: script
   script: rsync --quiet cronjob.js index.html $PRODUCTION_USER@$PRODUCTION_HOST:$PRODUCTION_WEBROOT
